--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ rss_path: atom.xml
 ####################
 
 author: "Escape On Demand, LLC"
-logo: "/assets/img/escape-on-demand@2x.png"
+logo: "/assets/img/logo/Logo@2x.png"
 
 # Contact
 email: "njessen@escapeondemand.com"
